@@ -2,114 +2,175 @@
 <!DOCTYPE psddl SYSTEM "psddl.dtd">
 
 <psddl>
-	<package name="PNCCD">
+    <package name="PNCCD">
 
-    Package containing definitions for pn-CCD Camera data types.
-	
-        <!-- ========================================================================= -->
-
-		<pstype name="ConfigV1" version="1" type_id="Id_pnCCDconfig" levels="Source">
-		
-		pnCCD configuration class ConfigV1
-		
-			<tag name="config-type"/>
-		
-			<attribute name="_numLinks" type="uint32_t" accessor="numLinks">
-			Number of links in the pnCCD.
-			</attribute>
-
-			<attribute name="_payloadSizePerLink" type="uint32_t" accessor="payloadSizePerLink">
-			Size of the payload in bytes for single link
-			</attribute>
-
-		</pstype>
-		
+        Package containing definitions for pn-CCD Camera data types.
 
         <!-- ========================================================================= -->
 
+        <pstype name="ConfigV1" version="1" type_id="Id_pnCCDconfig">
 
-		<pstype name="ConfigV2" version="2" type_id="Id_pnCCDconfig" levels="Source">
-		
-        pnCCD configuration class ConfigV2
-		
-			<tag name="config-type"/>
-		
-			<attribute name="_numLinks" type="uint32_t" accessor="numLinks">
-            Number of links in the pnCCD.
-			</attribute>
+            pnCCD configuration class ConfigV1
 
-			<attribute name="_payloadSizePerLink" type="uint32_t" accessor="payloadSizePerLink">
-            Size of the payload in bytes for single link
-			</attribute>
-			
-            <attribute name="_numChannels" type="uint32_t" accessor="numChannels">
-            Number of channels
-            </attribute>
-            
-            <attribute name="_numRows" type="uint32_t" accessor="numRows">
-            Number of rows
-            </attribute>
-            
-            <attribute name="_numSubmoduleChannels" type="uint32_t" accessor="numSubmoduleChannels">
-            Number of submodule channels
-            </attribute>
-            
-            <attribute name="_numSubmoduleRows" type="uint32_t" accessor="numSubmoduleRows">
-            Number of submodule rows
-            </attribute>
-            
-            <attribute name="_numSubmodules" type="uint32_t" accessor="numSubmodules">
-            Number of submodules
-            </attribute>
-            
-            <attribute name="_camexMagic" type="uint32_t" accessor="camexMagic">
-            Magic word from CAMEX
-            </attribute>
-            
-            <attribute name="_info" type="char" shape="256" accessor="info">
-            Information data string
-            </attribute>
-            
-            <attribute name="_timingFName" type="char" shape="256" accessor="timingFName">
-            Timing file name string
+            <tag name="config-type" />
+
+            <attribute name="_numLinks" type="uint32_t" accessor="numLinks">
+                Number of links in the pnCCD.
             </attribute>
 
-		</pstype>
-
-
-        <!-- ========================================================================= -->
-
-
-        <pstype name="FrameV1" version="1" type_id="Id_pnCCDframe" levels="Source" size="{xtc-config}.payloadSizePerLink()">
-
-        pnCCD configuration class FrameV1
-        
-            <xtc-config name="ConfigV1" />
-            <xtc-config name="ConfigV2" />
-            
-            <repeat count="{xtc-config}.numLinks()" />
-        
-            <attribute name="_specialWord" type="uint32_t" accessor="specialWord">
-            Special values
-            </attribute>
-
-            <attribute name="_frameNumber" type="uint32_t" accessor="frameNumber">
-            Frame number
-            </attribute>
-
-            <attribute name="_timeStampHi" type="uint32_t" accessor="timeStampHi">
-            Most significant part of timestamp
-            </attribute>
-
-            <attribute name="_timeStampLo" type="uint32_t" accessor="timeStampLo">
-            Least significant part of timestamp
-            </attribute>
-
-            <attribute name="__data" type="uint16_t" accessor="data" shape="({xtc-config}.payloadSizePerLink()-16)/2">
-            Frame data
+            <attribute name="_payloadSizePerLink" type="uint32_t" accessor="payloadSizePerLink">
+                Size of the payload in bytes for single link
             </attribute>
 
         </pstype>
 
-	</package>
+
+        <!-- ========================================================================= -->
+
+
+        <pstype name="ConfigV2" version="2" type_id="Id_pnCCDconfig">
+
+            pnCCD configuration class ConfigV2
+
+            <tag name="config-type" />
+
+            <attribute name="_numLinks" type="uint32_t" accessor="numLinks">
+                Number of links in the pnCCD.
+            </attribute>
+
+            <attribute name="_payloadSizePerLink" type="uint32_t" accessor="payloadSizePerLink">
+                Size of the payload in bytes for single link
+            </attribute>
+
+            <attribute name="_numChannels" type="uint32_t" accessor="numChannels">
+                Number of channels
+            </attribute>
+
+            <attribute name="_numRows" type="uint32_t" accessor="numRows">
+                Number of rows
+            </attribute>
+
+            <attribute name="_numSubmoduleChannels" type="uint32_t" accessor="numSubmoduleChannels">
+                Number of submodule channels
+            </attribute>
+
+            <attribute name="_numSubmoduleRows" type="uint32_t" accessor="numSubmoduleRows">
+                Number of submodule rows
+            </attribute>
+
+            <attribute name="_numSubmodules" type="uint32_t" accessor="numSubmodules">
+                Number of submodules
+            </attribute>
+
+            <attribute name="_camexMagic" type="uint32_t" accessor="camexMagic">
+                Magic word from CAMEX
+            </attribute>
+
+            <attribute name="_info" type="char" shape="256" accessor="info">
+                Information data string
+            </attribute>
+
+            <attribute name="_timingFName" type="char" shape="256" accessor="timingFName">
+                Timing file name string
+            </attribute>
+
+        </pstype>
+
+
+        <!-- ========================================================================= -->
+
+
+        <pstype name="FrameV1">
+
+            pnCCD class FrameV1, this is a class which is defined by origianl pdsdata package.
+
+            <xtc-config name="ConfigV1" />
+            <xtc-config name="ConfigV2" />
+
+
+            <attribute name="_specialWord" type="uint32_t" accessor="specialWord">
+                Special values
+            </attribute>
+
+            <attribute name="_frameNumber" type="uint32_t" accessor="frameNumber">
+                Frame number
+            </attribute>
+
+            <attribute name="_timeStampHi" type="uint32_t" accessor="timeStampHi">
+                Most significant part of timestamp
+            </attribute>
+
+            <attribute name="_timeStampLo" type="uint32_t" accessor="timeStampLo">
+                Least significant part of timestamp
+            </attribute>
+
+            <attribute name="__data" type="uint16_t" accessor="_data"
+                shape="({xtc-config}.payloadSizePerLink()-16)/2">
+                Frame data
+            </attribute>
+
+            <method name="data" type="uint16_t" rank="2">
+                <tag name="inline"/>
+                <expr lang="C++" value="make_ndarray(_data({xtc-config}).data(), 512, 512)"/>
+            </method>
+
+
+        </pstype>
+
+        <!-- ========================================================================= -->
+
+
+        <pstype name="FramesV1" version="1" type_id="Id_pnCCDframe">
+
+            pnCCD class FramesV1 which is a collection of FrameV1 objects, number of 
+            frames in collection is determined by numLinks() method (which should return 4 
+            in most cases). This class does not exist in original pdsdata, has been 
+            introduced to psana to help in organizing 4 small pnCCD frames together.
+
+            <xtc-config name="ConfigV1" />
+            <xtc-config name="ConfigV2" />
+
+            <attribute name="_frames" type="FrameV1" shape="{xtc-config}.numLinks()" accessor="frame" shape_method="frame_shape">
+            Number of frames is determined by numLinks() method.
+            </attribute>
+            
+            <method name="numLinks" type="uint32_t">
+                <tag name="inline"/>
+                <expr lang="C++" value="{xtc-config}.numLinks()"/>
+            </method>
+
+        </pstype>
+
+        <!-- ========================================================================= -->
+
+
+        <pstype name="FullFrameV1" version="1" type_id="Id_pnCCDframe">
+
+            This is a "synthetic" pnCCD frame which is four original 512x512 frames
+            glued together. This class does not exist in original pdsdata, it has been 
+            introduced to psana to simplify access to full frame data in the user code.
+
+            <attribute name="_specialWord" type="uint32_t" accessor="specialWord">
+                Special values
+            </attribute>
+
+            <attribute name="_frameNumber" type="uint32_t" accessor="frameNumber">
+                Frame number
+            </attribute>
+
+            <attribute name="_timeStampHi" type="uint32_t" accessor="timeStampHi">
+                Most significant part of timestamp
+            </attribute>
+
+            <attribute name="_timeStampLo" type="uint32_t" accessor="timeStampLo">
+                Least significant part of timestamp
+            </attribute>
+
+            <attribute name="_data" type="uint16_t" accessor="data" shape="1024,1024">
+                Full frame data, image size is 1024x1024.
+            </attribute>
+
+        </pstype>
+
+    </package>
 </psddl>
